--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="video">
         <h2>Vidéo : Les plantes bioluminescentes en action</h2>
         <video controls>
-            <source src="C:\Users\adam.ghenai\Documents\test123\video_plants.mp4" type="video/mp4">
+            <source src="video_plants.mp4" type="video/mp4">
         </video>
     </section>
     
